@@ -1,3 +1,9 @@
+2003-08-09 John Fleck <jfleck@inkstain.net>
+
+	* release-notes.xml
+	* rnepiphany.xml
+	add epiphany section
+
 2003-08-05 John Fleck <jfleck@inkstain.net>
 
 	* release-notes.xml
